gitops/mgmt/palworld/kustomize/base/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: palworld-server
  name: palworld-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: palworld-server
  template:
    metadata:
      labels:
        app: palworld-server
    spec:
      containers:
        - name: palworld-server
          image: thijsvanloef/palworld-server-docker
          imagePullPolicy: Always
          resources:
            limits:
              memory: "16Gi"
          ports:
            - containerPort: 8211
              name: server
              protocol: UDP
            - containerPort: 27015
              name: query
              protocol: UDP
          volumeMounts:
            - mountPath: /palworld
              name: datadir
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: palworld-server-datadir
